Создано с помощью Colaboratory

--- a/Нетология_(моё_решение).ipynb
+++ b/Нетология_(моё_решение).ipynb
@@ -5,8 +5,12 @@
     "colab": {
       "name": "Нетология (моё решение).ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPd6NbhbJ7Q/BiufMk5SUA3",
+      "toc_visible": true,
+      "collapsed_sections": [
+        "3E0CHqrwY6lF",
+        "wAY0KCJikufV"
+      ],
+      "authorship_tag": "ABX9TyMRKKytTqoau4mUsBm814l7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4684,6 +4688,110 @@
             "dtypes: float64(38), int64(9), object(10)\n",
             "memory usage: 37.6+ MB\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Кодируем выход методом One Hot Encoding"
+      ],
+      "metadata": {
+        "id": "wAY0KCJikufV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['target'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HCrCAmP_m9Ni",
+        "outputId": "8e49345f-9588-484b-df48-506fd27ab98a"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    174301\n",
+              "1     13512\n",
+              "5      3678\n",
+              "4      3659\n",
+              "3      3027\n",
+              "2      1823\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train = utils.to_categorical(df_train['target'], 6)"
+      ],
+      "metadata": {
+        "id": "EfjnNBehkrr8"
+      },
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_train[10050]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "c3S0seL2mINw",
+        "outputId": "c321894b-18a7-45eb-dbfb-1eebb2f7c879"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 1., 0.], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_train['target'].iloc[10050]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-ugOJOzRmUfR",
+        "outputId": "4292baca-e711-42a3-df87-5772c68eee9e"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
         }
       ]
     },
